--- a/app/src/main/res/layout/myrelative.xml
+++ b/app/src/main/res/layout/myrelative.xml
@@ -1,6 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="#000000">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="5dp"
+        android:textAlignment="center"
+        android:textColor="#ffffff"
+        android:id="@+id/textview1"
+        android:textSize="24dp"
+        android:text="RelativeLayout" />
+
+    <TextView
+        android:textColor="#ffffff"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/account"
+        android:layout_below="@+id/textview1"
+        android:textSize="24dp"
+        android:text="用户名称: " />
+
+    <EditText
+        android:background="@android:drawable/editbox_background"
+        android:id="@+id/textview2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_toRightOf="@id/account"
+        android:layout_alignBottom="@+id/account"
+        android:layout_below="@+id/textview1"
+        android:hint="账号"/>
+
+    <TextView
+        android:textColor="#ffffff"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/password"
+        android:layout_below="@+id/account"
+        android:textSize="24dp"
+        android:text="用户密码: " />
+
+    <EditText
+        android:id="@+id/textview3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_toRightOf="@+id/password"
+        android:layout_below="@+id/textview2"
+        android:layout_alignBottom="@+id/password"
+        android:background="@android:drawable/editbox_background"
+        android:hint="密码"></EditText>
+
+    <Button
+        android:id="@+id/mybutton1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/textview3"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="4dp"
+        android:text="注册"></Button>
+</RelativeLayout>
